Bug 282541 - Automatic Spellchecking works only for "Subject"
Summary: Automatic Spellchecking works only for "Subject"
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 2.0.97
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 287368 312067 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-22 08:29 UTC by Andreas Cord-Landwehr
Modified: 2013-06-06 13:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2011-09-22 08:29:55 UTC
Version:           2.0.97
OS:                Linux

If I enable "Automatic Spellchecking" from the "Options" menu, the red curly lines are only displayed for the Subject line, but not for the body text.--Actually I think, the automatic spellchecking is still disabled in the body composer window.

I am using GIT head for the 4.7.1 branch.

Reproducible: Always

Steps to Reproduce:
see above.


Expected Results:  
The automatic spellchecking should work also for the body text.
Comment 1 Laurent Montel 2011-09-23 08:13:12 UTC
Work fine here.
Comment 2 Andreas Cord-Landwehr 2011-09-23 08:17:26 UTC
Could you have a look at SystemSettings -> Locale -> SpellCheck, if there is "Spellchecking by default" activated? After activating this it also worked for me. But I assume that is not the intention of the Spell-Check-activation button in KMail.

Greetings,
   Andreas
Comment 3 Elián Hanisch 2012-04-25 23:24:01 UTC
I'm getting the same problem with Kmail2 in KDE 4.8.2, I had it since 4.7 but just now I bothered to look for a bug.

I have "Spellchecking by default" enabled in SystemSettings.
Comment 4 Aurelien Gateau 2013-06-06 13:31:04 UTC
Git commit 9cea94149015ca111e393e781b6e51ef39e08eae by Aurélien Gâteau.
Committed on 04/06/2013 at 18:29.
Pushed by gateau into branch 'master'.

Fix highlighting of spelling mistakes
REVIEW: 110829
FIXED-IN: 4.11.0

M  +2    -4    kpimtextedit/emailquotehighlighter.cpp

http://commits.kde.org/kdepimlibs/9cea94149015ca111e393e781b6e51ef39e08eae
Comment 5 Aurelien Gateau 2013-06-06 13:36:48 UTC
*** Bug 287368 has been marked as a duplicate of this bug. ***
Comment 6 Aurelien Gateau 2013-06-06 13:39:22 UTC
*** Bug 312067 has been marked as a duplicate of this bug. ***