Fix highlighting of spelling mistakes

BUG: 282541
REVIEW: 110829
FIXED-IN: 4.11.0